--- a/index.html
+++ b/index.html
@@ -1,21 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Evelin Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <h2>What Can JavaScript Do?</h2>
+    <header class="header">
+        <a href="#home" class="logo">Evelin
+            <span>Salsabila</span></a>
 
-<p>JavaScript can change HTML attribute values.</p>
+        <i class='bx bx-menu-alt-right' id="menu-icon"></i>
 
-<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#education">Education</a>
+            <a href="#services">Services</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-<button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hi, It's <span>Evelin</span></h1>
+            <h3 class="text-animation">I'm a <span></span></h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores vero ipsa ut suscipit cumque provident
+                ipsum, dolorem ab soluta veniam dolorum fuga sint adipisci repellat dignissimos quam, sit minima eaque!
+            </p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/EvelinSA05"><i class='bx bxl-github'></i></a>
+                <a
+                    href="https://www.instagram.com/_evlnslsaa_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                        class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
+            </div>
 
-<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+            <div class="btn-group">
+                <a href="" class="btn">Hire</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>
+        </div>
 
-<button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+        <div class="home-img">
+            <img src="foto-evelin.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="education" id="education">
+        <h2 class="heading">Education</h2>
+
+        <div class="timeline-items">
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2021</div>
+                <div class="timeline-content">
+                    <h3>High School</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta corporis, itaque saepe iusto sunt
+                        veniam deleniti, vero perspiciatis omnis, blanditiis optio deserunt! Officiis velit, numquam
+                        debitis a molestias quidem illum?</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2024</div>
+                <div class="timeline-content">
+                    <h3>University</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta corporis, itaque saepe iusto sunt
+                        veniam deleniti, vero perspiciatis omnis, blanditiis optio deserunt! Officiis velit, numquam
+                        debitis a molestias quidem illum?</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>UI DESIGN</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
+                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
+                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Frontend</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
+                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
+                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Backend</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
+                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
+                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Testing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
+                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
+                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+            <div class="wrapper">
+                <div class="testimonial-item">
+                    <img src="foto-evelin.png" alt="">
+                    <h2>Marilyn</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
+                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
+                        deserunt ipsa repellat maxime natus!</p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="foto-evelin.png" alt="">
+                    <h2>Julia</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
+                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
+                        deserunt ipsa repellat maxime natus!</p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="foto-evelin.png" alt="">
+                    <h2>Renata</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
+                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
+                        deserunt ipsa repellat maxime natus!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name" class="text">
+                    <input type="email" placeholder="Email" class="text">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/EvelinSA05"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/_evlnslsaa_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                    class='bx bxl-instagram-alt'></i></a>
+            <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+
+            <li>
+                <a href="#">Services</a>
+            </li>
+
+            <li>
+                <a href="#">About Me</a>
+            </li>
+
+            <li>
+                <a href="#">Contact</a>
+            </li>
+
+            <li>
+                <a href="#">Testimonials</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            ©️ Evelin Salsabila | All Rights Reserved
+        </p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
