--- a/index.html
+++ b/index.html
@@ -10,28 +10,24 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="header">
-        <a href="#home" class="logo">Evelin
-            <span>Salsabila</span></a>
-
+        <a href="#home" class="logo">Evelin <span>Salsabila</span></a>
         <i class='bx bx-menu-alt-right' id="menu-icon"></i>
-
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
-            <a href="#services">Services</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact</a>
+            <a href="#testimonials">Project</a>
         </nav>
     </header>
 
+    <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hi, It's <span>Evelin</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores vero ipsa ut suscipit cumque provident
-                ipsum, dolorem ab soluta veniam dolorum fuga sint adipisci repellat dignissimos quam, sit minima eaque!
-            </p>
+            <p>Undergraduate student from UPN Veteran Jawa Timur majoring in Information System. Interested in all forms
+                of technology and its developments, have some experience making projects when I was in high school.</p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/EvelinSA05"><i class='bx bxl-github'></i></a>
@@ -40,31 +36,29 @@
                         class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
             </div>
-
-            <div class="btn-group">
-                <a href="" class="btn">Hire</a>
-                <a href="#contact" class="btn">Contact</a>
-            </div>
         </div>
-
         <div class="home-img">
-            <img src="foto-evelin.png" alt="">
+            <img src="foto-evelin.png" alt="Evelin's Photo">
         </div>
-
     </section>
 
+    <!-- Education Section -->
     <section class="education" id="education">
         <h2 class="heading">Education</h2>
-
         <div class="timeline-items">
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-date">2021</div>
                 <div class="timeline-content">
-                    <h3>High School</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta corporis, itaque saepe iusto sunt
-                        veniam deleniti, vero perspiciatis omnis, blanditiis optio deserunt! Officiis velit, numquam
-                        debitis a molestias quidem illum?</p>
+                    <h3>HIGH SCHOOL</h3>
+                    <h3>SMKN 2 BUDURAN SIDOARJO</h3>
+                    <p>Software Engineering</p>
+                    <p>Grade: 90.14</p>
+                    <p>Predicate: <br>Eligible 1 majoring in Computer Engineering and Informatics semesters 1-5</p>
+                    <p>Project : <br>
+                        - Website Food Recipes with React and Laravel<br>
+                        - Android App Salon Cashier with Java and Laravel
+                    </p>
                 </div>
             </div>
 
@@ -72,132 +66,72 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content">
-                    <h3>University</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta corporis, itaque saepe iusto sunt
-                        veniam deleniti, vero perspiciatis omnis, blanditiis optio deserunt! Officiis velit, numquam
-                        debitis a molestias quidem illum?</p>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="services" id="services">
-        <h2 class="heading">Services</h2>
-
-        <div class="services-container">
-            <div class="service-box">
-                <div class="service-info">
-                    <h4>UI DESIGN</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
-                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
-                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
-                </div>
-            </div>
-
-            <div class="service-box">
-                <div class="service-info">
-                    <h4>Frontend</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
-                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
-                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
-                </div>
-            </div>
-
-            <div class="service-box">
-                <div class="service-info">
-                    <h4>Backend</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
-                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
-                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
-                </div>
-            </div>
-
-            <div class="service-box">
-                <div class="service-info">
-                    <h4>Testing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis assumenda enim facere
-                        laborum, alias maiores necessitatibus quisquam error. Voluptatibus voluptatum enim nostrum, in
-                        nisi dolorum reprehenderit exercitationem magnam neque.</p>
+                    <h3>UNIVERSITY</h3>
+                    <h3>UPN VETERAN JAWA TIMUR</h3>
+                    <p>S1 Information System</p>
+                    <p>Activities: </p>
+                    <p>Volunteering as a Website Division at Pemira Fasilkom 2025</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
         <div class="testimonials-box">
-            <h2 class="heading">Testimonials</h2>
+            <h2 class="heading">Project</h2>
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img src="foto-evelin.png" alt="">
-                    <h2>Marilyn</h2>
-                    <div class="rating">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
+                    <div class="project1">
+                        <img class="img1" src="Screenshot(1009).png" alt="Food Recipes Website">
+                        <div class="align">
+                            <h2>Website Desktop <br> 'Food Recipes'</h2>
+                            <h2>With React and Laravel</h2>
+                            <p>Features include <br><br>
+                                Users: <br>
+                                • Register and login <br>
+                                • User information page <br>
+                                • Search for recipes <br>
+                                • Bookmarks recipes <br>
+                                • Attractive design <br><br>
+
+                                Admin: <br>
+                                • User activities such as: <br> recipes saved by the user <br>
+                                • View customer data <br>
+                                • User login data</p>
+                        </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
-                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
-                        deserunt ipsa repellat maxime natus!</p>
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="foto-evelin.png" alt="">
-                    <h2>Julia</h2>
-                    <div class="rating">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
-                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
-                        deserunt ipsa repellat maxime natus!</p>
-                </div>
+                    <img class="img2" src="homepage.png" alt="Salon Cashier App">
+                    <div class="align2">
+                        <h2>App Android <br> 'Salon Cashier'</h2>
+                        <h2>With Java and Laravel</h2>
+                        <p>Features include <br><br>
+                            Users (Cashier): <br>
+                            • Register and login <br>
+                            • Cashier information page <br>
+                            • Basket to store services <br>
+                            • Checkout and service transactions <br>
+                            • Manage customer data <br>
+                            • View transaction history <br><br>
 
-                <div class="testimonial-item">
-                    <img src="foto-evelin.png" alt="">
-                    <h2>Renata</h2>
-                    <div class="rating">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
+                            Admin: <br>
+                            • Login Admin <br>
+                            • Manage salon services <br>
+                            • Transaction history <br>
+                            • View customer data <br>
+                            • Manage cashier data <br>
+
+                        </p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
-                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
-                        deserunt ipsa repellat maxime natus!</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
-
-        <form action="">
-            <div class="input-group">
-                <div class="input-box">
-                    <input type="text" placeholder="Full Name" class="text">
-                    <input type="email" placeholder="Email" class="text">
-                </div>
-                <div class="input-box">
-                    <input type="number" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject">
-                </div>
-            </div>
-
-            <div class="input-group-2">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="btn">
-            </div>
-        </form>
-    </section>
-
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="social">
             <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
@@ -206,31 +140,11 @@
                     class='bx bxl-instagram-alt'></i></a>
             <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
         </div>
-
         <ul class="list">
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-
-            <li>
-                <a href="#">Services</a>
-            </li>
-
-            <li>
-                <a href="#">About Me</a>
-            </li>
-
-            <li>
-                <a href="#">Contact</a>
-            </li>
-
-            <li>
-                <a href="#">Testimonials</a>
-            </li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#testimonials">Project</a></li>
         </ul>
-        <p class="copyright">
-            ©️ Evelin Salsabila | All Rights Reserved
-        </p>
+        <p class="copyright">©️ Evelin Salsabila | All Rights Reserved</p>
     </footer>
 
     <script src="script.js"></script>
