--- a/tes.html
+++ b/tes.html
@@ -3,17 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evelin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <!-- Header Section -->
     <header class="header">
-        <a href="#home" class="logo">Evelin <span>Salsabila</span></a>
+        <a href="#home" class="logo">Evelin
+            <span>Salsabila</span></a>
+
         <i class='bx bx-menu-alt-right' id="menu-icon"></i>
+
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
@@ -21,13 +23,14 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hi, It's <span>Evelin</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>Undergraduate student from UPN Veteran Jawa Timur majoring in Information System. Interested in all forms
-                of technology and its developments, have some experience making projects when I was in high school.</p>
+            <p>Undergraduate student from UPN Veteran Jawa Timur majoring in Information System. Interested in all
+                forms of technology and its developments, have some experience making projects when I was in high
+                school.
+            </p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/EvelinSA05"><i class='bx bxl-github'></i></a>
@@ -37,14 +40,16 @@
                 <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
             </div>
         </div>
+
         <div class="home-img">
-            <img src="foto-evelin.png" alt="Evelin's Photo">
+            <img src="foto-evelin.png" alt="">
         </div>
+
     </section>
 
-    <!-- Education Section -->
     <section class="education" id="education">
         <h2 class="heading">Education</h2>
+
         <div class="timeline-items">
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
@@ -55,7 +60,7 @@
                     <p>Software Engineering</p>
                     <p>Grade: 90.14</p>
                     <p>Predicate: <br>Eligible 1 majoring in Computer Engineering and Informatics semesters 1-5</p>
-                    <p>Project: <br>
+                    <p>Project : <br>
                         - Website Food Recipes with React and Laravel<br>
                         - Android App Salon Cashier with Java and Laravel
                     </p>
@@ -71,70 +76,69 @@
                     <p>S1 Information System</p>
                     <p>Activities: </p>
                     <p>Volunteering as a Website Division at Pemira Fasilkom 2025</p>
-                    <p>Project: <br>
-                        - Website Online Course with Laravel, Filament <br>
-                        - Wesite Booking Kos Modern Laravel, Filament <br>
-                        - IOT Mini/Pocket Drone
-                    </p>
                 </div>
             </div>
+
         </div>
     </section>
 
-    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
         <div class="testimonials-box">
             <h2 class="heading">Project</h2>
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img class="img-horizontal" src="Screenshot(1009).png" alt="Food Recipes Website">
-                    <div class="project-details">
-                        <h2>Website Desktop <br> 'Food Recipes'</h2>
-                        <h2>With React and Laravel</h2>
-                        <p>Features include <br><br>
-                            Users: <br>
-                            • Register and login <br>
-                            • User information page <br>
-                            • Search for recipes <br>
-                            • Bookmarks recipes <br>
-                            • Attractive design <br><br>
+                    <div class="project1">
+                    <img class="img1" src="Screenshot(1009).png" alt="">
+                    <h2>Website Desktop <br> 'Food Recipes'</h2>
+                    <h2>With React and Laravel</h2>
+                    <p>Features include: <br>
+                        Users: <br> 
+                        • Register and login <br>
+                        • User information page <br>
+                        • Search for recipes <br>
+                        • Bookmarks recipes <br>
+                        • Attractive design <br><br>
 
-                            Admin: <br>
-                            • User activities such as: <br> recipes saved by the user <br>
-                            • View customer data <br>
-                            • User login data</p>
+                        Admin: <br>
+                        • User activities such as: <br> recipes saved by the user <br>
+                        • User login data</p>
                     </div>
                 </div>
 
                 <div class="testimonial-item">
-                    <img class="img-vertical" src="homepage.png" alt="Salon Cashier App">
-                    <div class="project-details">
-                        <h2>App Android <br> 'Salon Cashier'</h2>
-                        <h2>With Java and Laravel</h2>
-                        <p>Features include <br><br>
-                            Users (Cashier): <br>
-                            • Register and login <br>
-                            • Cashier information page <br>
-                            • Basket to store services <br>
-                            • Checkout and service transactions <br>
-                            • Manage customer data <br>
-                            • View transaction history <br><br>
-
-                            Admin: <br>
-                            • Login Admin <br>
-                            • Manage salon services <br>
-                            • Transaction history <br>
-                            • View customer data <br>
-                            • Manage cashier data <br>
-
-                        </p>
+                    <img class="img2" src="homepage.png" alt="">
+                    <h2>App Android <br> 'Salon Cashier'</h2>
+                    <h2>With Java and Laravel</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
                     </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
+                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
+                        deserunt ipsa repellat maxime natus!</p>
                 </div>
+
+                <!-- <div class="testimonial-item">
+                    <img src="foto-evelin.png" alt="">
+                    <h2>Renata</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sed eveniet repudiandae velit
+                        quis nulla pariatur aliquid amet omnis itaque, quod nisi laboriosam, exercitationem perferendis
+                        deserunt ipsa repellat maxime natus!</p>
+                </div> -->
             </div>
         </div>
     </section>
 
-    <!-- Footer Section -->
     <footer class="footer">
         <div class="social">
             <a href="https://www.linkedin.com/in/evelin-salsabila-a-7b5013258/"><i class='bx bxl-linkedin'></i></a>
@@ -143,11 +147,27 @@
                     class='bx bxl-instagram-alt'></i></a>
             <a href="https://www.youtube.com/@evelinsa5"><i class='bx bxl-youtube'></i></a>
         </div>
+
         <ul class="list">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#testimonials">Project</a></li>
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+
+            <li>
+                <a href="#">Services</a>
+            </li>
+
+            <li>
+                <a href="#">About Me</a>
+            </li>
+
+            <li>
+                <a href="#">Testimonials</a>
+            </li>
         </ul>
-        <p class="copyright">©️ Evelin Salsabila | All Rights Reserved</p>
+        <p class="copyright">
+            ©️ Evelin Salsabila | All Rights Reserved
+        </p>
     </footer>
 
     <script src="script.js"></script>
