--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <h3>SMKN 2 BUDURAN SIDOARJO</h3>
                     <p>Software Engineering</p>
                     <p>Grade: 90.14</p>
-                    <p>Predicate: <br>Eligible 1 majoring in Computer Engineering and Informatics semesters 1-5</p>
-                    <p>Project: <br>
-                        - Website Food Recipes with React, Laravel, and MySQL<br>
-                        - Android App Salon Cashier with Java, Laravel, and MySQL
+                    <p>Predicate: Eligible 1 majoring in Computer Engineering</p>
+                    <p>Project:
+                        <br>- Website Food Recipes with React, Laravel
+                        <br>- Android App Salon Cashier with Java
                     </p>
                 </div>
             </div>
@@ -69,11 +69,10 @@
                     <h3>UNIVERSITY</h3>
                     <h3>UPN VETERAN JAWA TIMUR</h3>
                     <p>S1 Information System</p>
-                    <p>Activities: </p>
-                    <p>Volunteering as a Website Division at Pemira Fasilkom 2025</p>
-                    <p>Project: <br>
-                        - Website Online Course with Laravel, Filament, and MySQL <br>
-                        - Wesite Booking Kos Modern Laravel, Filament, and MySQL <br>
+                    <p>Activities: Volunteering as Website Division</p>
+                    <p>Project:
+                        <br>- Online Course with Laravel
+                        <br>- Booking Kos Modern
                     </p>
                 </div>
             </div>
