--- a/index.html
+++ b/index.html
@@ -85,11 +85,36 @@
             <h2 class="heading">Project</h2>
             <div class="wrapper">
                 <div class="testimonial-item">
+                    <img class="img-horizontal" src="to-do-list.png" alt="To Do List Program">
+                    <div class="project-details">
+                        <h2>'To Do List'</h2>
+                        <h2>With Python and JSON</h2>
+                        <p><br>Features include <br><br>
+                            Users: <br>
+                            • Task Management with Deadline <br>
+                            • Input Validation <br>
+                            • Task Reminder (Deadline Alert) <br>
+                            • Table View with Treeview <br>
+                            • Local Data Storage <br>
+                            • Add and Delete Task Function <br><br></p>
+                    </div>
+                </div>
+
+                <div class="testimonial-item">
+                    <img class="img-horizontal" src="dino-game.png" alt="Dino Games">
+                    <img class="img-horizontal" src="car-game.png" alt="Car Games">
+                    <div class="project-details">
+                        <h2>'Car and Dino Games'</h2>
+                        <h2>With C++</h2>
+                    </div>
+                </div>
+
+                <div class="testimonial-item">
                     <img class="img-horizontal" src="Screenshot(1009).png" alt="Food Recipes Website">
                     <div class="project-details">
                         <h2>Website <br> 'Food Recipes'</h2>
                         <h2>With React, Laravel, MySQL</h2>
-                        <p>Features include <br><br>
+                        <p><br>Features include <br><br>
                             Users: <br>
                             • Register and login <br>
                             • User information page <br>
@@ -109,7 +134,7 @@
                     <div class="project-details">
                         <h2>App Android <br> 'Salon Cashier'</h2>
                         <h2>With Java, Laravel, MySQL</h2>
-                        <p>Features include <br><br>
+                        <p><br>Features include <br><br>
                             Users (Cashier): <br>
                             • Register and login <br>
                             • Cashier information page <br>
@@ -134,7 +159,7 @@
                     <div class="project-details">
                         <h2>Website<br>'Online Course'</h2>
                         <h2>With Laravel, Filament, MySQL</h2>
-                        <p>Features include <br><br>
+                        <p><br>Features include <br><br>
                             Users: <br>
                             • Register and login <br>
                             • View class catalog <br>
@@ -154,7 +179,7 @@
                     </div>
                 </div>
 
-                <div class="testimonial-item">
+                <!-- <div class="testimonial-item">
                     <img class="img-vertical" src="iPhone-12-PRO-127.0.0.1.png" alt="Salon Cashier App">
                     <div class="project-details">
                         <h2>Website<br> 'Booking Kos Modern'</h2>
@@ -179,19 +204,18 @@
                             • Monitor all transactions <br>
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
 
     <!-- Image Gallery Section -->
-    <h3 class="heading">landing Page</h3>
+    <h3 class="heading">Landing Page</h3>
     <section class="horizontal-gallery">
         <div class="gallery-container">
 
             <img src="Screenshot(1269).png" alt="Project 1" class="horizontal-img">
             <img src="Screenshot(1270).png" alt="Project 2" class="horizontal-img">
-            <img src="Screenshot(1271).png" alt="Project 3" class="horizontal-img">
         </div>
     </section>
 
