--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <p>Activities: Volunteering as Website Division</p>
                     <p>Project:
                         <br>- Online Course with Laravel
-                        <br>- Booking Kos Modern
+                        <br>- To Do List with Python and JSON
+                        <br>- Car and Dino Games with C++
+                        <br>- 2 Landing Page with HTML, CSS, Javascript
                     </p>
                 </div>
             </div>
